--- a/styles-contact.css
+++ b/styles-contact.css
@@ -162,9 +162,9 @@ font-style: normal;
 
 
 nav{
-	font-family: "despina-pro", sans-serif; /*-- new font --*/
-font-weight: 400;
-font-style: normal;
+	font-family: "dunbar-text", sans-serif; /*---- new text for links after critique ---- */
+font-weight: 700;
+font-style: italic;
 	font-size: 1.2em;
 	width: 80%; /* ---- This is for responsiveness ---- */
 	margin: 0 auto;
